[package]
name = "taceo-oprf-types"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
description = "Types for TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[dependencies]
alloy = { workspace = true, features = ["contract"], optional = true }
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
circom-types = { workspace = true, features = [
  "bn254",
  "groth16",
  "proof",
  "zkey"
], optional = true }
eyre = { workspace = true }
groth16-sol = { workspace = true, optional = true }
http = { workspace = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.5" }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[features]
default = ["chain"]
chain = ["dep:alloy", "dep:groth16-sol", "dep:circom-types"]
