[package]
name = "taceo-oprf"
version = "0.17.2"
edition.workspace = true
rust-version.workspace = true
description = "Everything you need to use TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[dependencies]
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.10.3", optional = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.6.1", default-features = false, optional = true }
oprf-dev-client = { package = "taceo-oprf-dev-client", path = "../oprf-dev-client", version = "0.10.2", optional = true }
oprf-service = { package = "taceo-oprf-service", path = "../oprf-service", version = "0.18.2", default-features = false, optional = true }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.15.0", default-features = false, optional = true }

alloy = { workspace = true, features = [
  "contract",
  "node-bindings",
  "provider-http",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
  "sol-types"
], optional = true }
eyre = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []

anvil = ["chain", "dep:alloy", "dep:eyre", "dep:serde_json", "types"]
client = ["dep:oprf-client"]
core = ["dep:oprf-core"]
dev-client = ["client", "dep:oprf-dev-client"]
service = ["dep:oprf-service"]
types = ["dep:oprf-types"]

# oprf-types
chain = ["oprf-types?/chain"]
# --- forwarded transitive features ---
# oprf-service
postgres = ["oprf-service?/postgres"]

full = [
  "chain",
  "client",
  "core",
  "dev-client",
  "postgres",
  "service",
  "types",
]
